@@ -1,5 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX wmaker.desktop 221 RMD160 501ba6451f7e756cc3d07682d728bcd6fe55366d SHA1 acd95a41645fbef358459f8f4753056cb321497e SHA256 40359d3c61117f0dbc5eb547e4c369982427e8bc3174c95002d34eb30f9a4a84
 DIST WindowMaker-extra-0.1.tar.gz 238018 RMD160 94334c2c12d20a8fd0cd2a70e54cd3689f043038 SHA1 80f34cb3af705ec0f79d727b82cef28ee50fc4e7 SHA256 acd6e1fb790485b107daf2b710da372367b41383c55d9c8bdfdac521d850edc4
-EBUILD windowmaker-9999.ebuild 2642 RMD160 634729f5b200aef4c463d5067a091fd61b4585a9 SHA1 b7f5c091893284a349af8a56073f8c7c503e2a43 SHA256 9db6f34b339d1c387e337e344cbaeb7a9e160687949840aa85fccc72159d7f45
-MISC ChangeLog 846 RMD160 a0eb8c69d859ecc8ea6b417d53f577931083025b SHA1 13c33865d24a175a46eee7e7c87ee04a6a19f7b3 SHA256 0183e53dc338a4a1ef3b29e7fece330b217c4302d0ac016e1491f5e31b1dfcb0
+EBUILD windowmaker-9999.ebuild 2652 RMD160 7ff7cea4158afb3aa6259750c8fe7c7fa4801d05 SHA1 3b11f1245e3c2fb955702a6cc9ecbbff77bbc21c SHA256 6f604e8591a1123d45ce9dcd3bb9cd1ae080eb29e6d5a88f5a885ce6312a752b
+MISC ChangeLog 992 RMD160 09a1604f4df55e20f4c0c7efa54b575f587c1bb7 SHA1 d0dd876e66a9af825240f224a0ec9f247fccaa44 SHA256 7f5f5686055f73b92a561532dea1d8788cc4b30b091d0c7c959fd768aae10400
 MISC metadata.xml 394 RMD160 b38936f0ba7b057fb41eeab348514bc1ee5a9b29 SHA1 c6207f10ee5f811733c721277dbe9fabe3d16ead SHA256 1b7d1d11e92f67acd47aa9243ae010ea48f55c631fa6b43b025b368b8c03a9ee
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.18 (GNU/Linux)
+
+iF4EAREIAAYFAk81QwAACgkQFYEBGcdFJfK4iQD+PcCL/O3zT+R9gwj+ediIwMQD
++HhvHFkh1XLzRcAHc6EBAKc6q9zdUH344SaiWWhJE0BsPAJJFp7XDX0gOGr51oBj
+=EFot
+-----END PGP SIGNATURE-----
